--- a/css/style.css
+++ b/css/style.css
@@ -49,12 +49,15 @@
 }
 
 html {
+  overflow-x: hidden;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
 *,
 *::before,
 *::after {
+  -webkit-box-sizing: inherit;
   box-sizing: inherit;
 }
 
