--- a/css/style.css
+++ b/css/style.css
@@ -391,6 +391,7 @@ body {
   line-height: 22px;
   border: none;
   border-bottom: 1px solid var(--light-gray);
+  border-radius: 0;
 }
 
 .search-form__input::-webkit-input-placeholder {
@@ -514,6 +515,7 @@ body {
   top: 0;
   width: 100%;
   height: 100%;
+  border-radius: 32px;
 }
 
 .swiper_slide1 {
